<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <!--    lalbhai logo-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_logo_lalbhai" />

    </RelativeLayout>

    <!--    welcoming message-->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/welcome_aboard"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <!--    login message-->
    <TextView
        android:id="@+id/loginMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login_message"
        android:textColor="@color/black"
        android:textSize="18sp" />

<!--    layout containing mobile no., otp, forgot password, login btn & error message-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <!--        mobile number entry field-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_no"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_no_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        otp entry field-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:inputType="numberPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        layout for forgot password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

<!--            forgot password text button-->
            <TextView
                android:id="@+id/forgot_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/architects_daughter"
                android:onClick="forgotPasswordMethod"
                android:text="@string/forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </RelativeLayout>

        <!--        login button-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/dim_light_blue"
            android:fontFamily="@font/abril_fatface"
            android:onClick="loginMethod"
            android:text="@string/login"
            android:textColor="@color/black" />
        <!--        Send otp Button-->
        <Button
            android:id="@+id/send_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/dim_light_blue"
            android:fontFamily="@font/abril_fatface"
            android:onClick="sendOtp"
            android:text="Send Otp"
            android:textColor="@color/black" />

        <!--        verify otp Button initialy not visible-->
        <Button
            android:id="@+id/verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/dim_light_blue"
            android:fontFamily="@font/abril_fatface"
            android:text="Verify Otp"
            android:textColor="@color/black"
            android:visibility="gone"/>


<!--        layout for error message-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <!--            error message-->
            <TextView
                android:id="@+id/error_message_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-black"
                android:text=""
                android:textColor="@color/red"
                android:textSize="18sp"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
